<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#212121">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#ffff"
            android:textColorHint="#fff"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/etLoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_button"
            android:text="@string/btn_logIn"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/create_new_account"
            android:textColor="#757575"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>