<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#212121">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/viewDetailsRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/mVideoPlayer"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <ImageView
                android:id="@+id/playVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_play_circle_outline_65dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgViewImg"
                android:layout_width="172dp"
                android:layout_height="220dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mTxtViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mTextViewRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:drawableTop="@drawable/ic_star_30dp"
                    android:textSize="15sp"
                    android:textColor="#ffff"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/mTextViewRateUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:drawableTop="@drawable/ic_star_border_28dp"
                    android:textSize="12sp"
                    android:textColor="#ffff"
                    android:text="@string/rate_us"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/story_line"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTxtViewDecription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="25dp"
            android:paddingBottom="2dp"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:alpha="0.80"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/genre"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTextViewGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="25dp"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:alpha="0.80"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cast"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTextViewCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="25dp"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:alpha="0.80"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/director"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTextViewDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="25dp"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:alpha="0.80"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/run_time"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTextViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="25dp"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:alpha="0.80"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/comment"
                    android:textColor="#ffff"
                    android:textSize="15sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="#ffff"/>

                <ImageButton
                    android:background="@drawable/circle_button"
                    android:id="@+id/btnComment"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_send_22dp" />
            </LinearLayout>

            <com.example.farhan.moviereview.NonScrollListView
                android:id="@+id/vdListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="false" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
